@@ -6,6 +6,7 @@ import Ensamblador.Clientess.Cliente;
 import Ensamblador.Librosc.Libros;
 import Ensamblador.Ventass.Ventas;
 
+import java.time.LocalDate;
 import java.util.List;
 
 public class EnsambladorReportes extends Ensamblador {
@@ -18,7 +19,7 @@ public class EnsambladorReportes extends Ensamblador {
         // Generar un reporte con información detallada sobre los clientes
         StringBuilder reporte = new StringBuilder();
         for (Cliente cliente : clientes) {
-            reporte.append("Nombre: ").append(Cliente.getNombre()).append(", Email: ").append(cliente.getEmail()).append(", Teléfono: ").append(cliente.getNumTelefono()).append("\n");
+            reporte.append("Nombre: ").append(cliente.getNombre()).append("Direccion: ").append(cliente.getDireccion()).append(", Email: ").append(cliente.getEmail()).append(", Teléfono: ").append(cliente.getNumTelefono()).append(", Fecha Registro: ").append(cliente.getFechaRegistro()).append("\n");
         }
         return reporte.toString();
     }
@@ -27,7 +28,7 @@ public class EnsambladorReportes extends Ensamblador {
         // Generar un reporte con información detallada sobre los libros disponibles
         StringBuilder reporte = new StringBuilder();
         for (Libros libro : libros) {
-            reporte.append("Título: ").append(Libros.getTitulo()).append(", Autor: ").append(libro.getAutor()).append(", Precio: ").append(libro.getPrecio()).append("\n");
+            reporte.append("Título: ").append(libro.getTitulo()).append(", Autor: ").append(libro.getAutor()).append(", Precio: ").append(libro.getPrecio()).append("\n");
         }
         return reporte.toString();
     }
@@ -35,19 +36,20 @@ public class EnsambladorReportes extends Ensamblador {
     public String generarReporteVentas() {
         // Generar un reporte con información detallada sobre las ventas realizadas
         StringBuilder reporte = new StringBuilder();
-        for (Ventas venta : ventas) { 
+        for (Ventas venta : ventas) {
             // Obtener el cliente de la venta actual
-            Cliente cliente = venta.getCliente(); 
+            LocalDate fecha = venta.getFechaVentas();
             // Obtener el libro de la venta actual
-            Libros libro = venta.getLibrosVendidos().get(0); // Suponiendo que 'getLibrosVendidos()' devuelve una lista y queremos el primer libro vendido
+            Libros libro = venta.getLibrosVendidos().getFirst(); // Suponiendo que 'getLibrosVendidos()' devuelve una lista y queremos el primer libro vendido
+            Cliente cliente = venta.getCliente();
             // Agregar detalles de la venta al reporte
-            reporte.append("Cliente: ").append(cliente.getNombre())
-                    .append(", Libro: ").append(libro.getTitulo())
-                    .append(", Cantidad: ").append(venta.getLibrosVendidos().size()) // Aquí supongo que deseas mostrar la cantidad de libros vendidos
-                    .append(", Total: ").append(venta.calcularTotal())
+            reporte.append("Fecha Registrada: ").append(fecha)
+                    .append(", Libro Vendidos: ").append(libro)
+                    .append(", Cliente: ").append(cliente)
                     .append("\n");
         }
         return reporte.toString();
     }
-    // HOLA
+
+
 }
